# InsightXTra_2024

./: .gitignore  README.md  deploy_lod.sh  deploy_self_service.sh  docker-compose.yml  prepare_cluster.sh  start.ps1
ansible/: cluster_setup.yml  create_cifs_share.yml  create_nfs_share.yml  vserver_create.yml
ansible/cifs_share/defaults/: main.yml
ansible/cifs_share/handlers/: main.yml
ansible/cifs_share/tasks/: main.yml
ansible/cifs_share/tests/: test.yml
ansible/cifs_share/vars/: main.yml
ansible/cluster_setup/tasks/: main.yml
ansible/cluster_setup/vars/: main.yml
ansible/nfs_share/defaults/: main.yml
ansible/nfs_share/handlers/: main.yml
ansible/nfs_share/tasks/: main.yml
ansible/nfs_share/tests/: test.yml
ansible/nfs_share/vars/: main.yml
ansible/vserver/defaults/: main.yml
ansible/vserver/handlers/: main.yml
ansible/vserver/tasks/: create_and_configure_vserver.yml  main.yml
ansible/vserver/tests/: test.yml
ansible/vserver/vars/: main.yml
ontap-rest/: Cargo.toml
ontap-rest/src/: env_vars.rs  main.rs
python-rest_endpoint/: Dockerfile  api.py  create_share.py  pyproject.toml  requirements.txt
pytjon-rest_endpoint/: api.py
rust-rest_endpoint/: Cargo.toml  Dockerfile
rust-rest_endpoint/src/: env_vars.rs  main.rs  ontap.rs
vue-frontend/: Dockerfile
vue-frontend/app/: index.html
vue-frontend/app/js/: app.js
